# rust-grpc-server

./: .env_example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  bench.sh  build.rs  readme.md
docs/: dev-workflow.md  docker_production.md  evans-cli.md  gitpod-cli.md  postman.md  terraform.md  vscode-snippets.md
migrations/: user.sql
payload/: payload
pb/: auth.rs  counter.rs
protos/: auth.proto  counter.proto  echo.proto  hello_world.proto  user.proto
src/: main.rs
src/auth_service/: auth_impl.rs  mod.rs
src/counter/: counter_impl.rs  mod.rs
src/echo_service/: echo_impl.rs  mod.rs
src/hello_world/: hello_world_impl.rs  mod.rs
src/models/: user_model.rs
src/user/: mod.rs  user_service_impl.rs
