[package]
name = "microservices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
prost = "0.11.8"
prost-derive = "0.11.8"
prost-types = "0.11.8"
sqlx = {version =  "0.7.1" , features = ["postgres", "runtime-tokio-native-tls"] }
tokio = {version = "1.27.0",  features = ["full"] }
tonic = {version = "0.9.1", features = ["codegen"] }
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9.1"
glob = "0.3.1"

